# saas-backend

./: .env.example  .gitignore  OUTLINE_API_DOCS.md  README.md  SEO_WORKFLOW_FIX.md  SYSTEM_STATUS_REPORT.md  analyze_blog_ai.py  blog_automation_clean.py  blog_generation_markdown.py  blog_generation_standalone.py  blog_generation_with_images.py  content_automation.py  content_automation_with_seo.py  index.html  india_cricket_detailed_outline.md  markdown_to_html_converter.py  n8nflow.json  pyproject.toml  requirements.txt  run_clean_blog_automation.py  seo_content_enhancer.py  start_services.sh  test_comprehensive_outline.py  test_seo_enhancer.py  view_generated_content.py
app/: auth.py  database.py  main.py  models.py  outline_generation.py
app/featured-image-generator/: .env.example  .gitignore  README.md  USAGE.md  download_fonts.py  example.py  main.py  pyproject.toml  requirements.txt  run_server.py  setup.py  start.py
docs/: API_DOCUMENTATION.md  BLOG_GENERATION_README.md  BLOG_GENERATION_SUMMARY.md  FLOW_DIAGRAMS.md  SEO_IMPROVEMENTS_SUMMARY.md
generated_content/: Sacred-Cats-in-Hindu-Mythology-Divine-Felines-and-Ancient-Wisdom-20250716-170415.md  Sacred-Cats-in-Hindu-Mythology-Divine-Felines-and-Ancient-Wisdom-20250716-172609.md  Sacred-Cats-in-Hindu-Mythology-Divine-Felines-and-Ancient-Wisdom-20250716-180142.md  Sacred-Cats-in-Hindu-Mythology-Divine-Felines-and-Ancient-Wisdom-20250716-180924.md  Sacred-Cats-in-Hindu-Mythology-Divine-Felines-and-Ancient-Wisdom-20250716-183454.md  What-are-Vedas-what-good-are-these-vedas-in-todays-world-20250717-105041.md  (+13 more)
(+54 files in other folders)
