[project]
name = "featured-image-generator"
version = "1.0.0"
description = "A FastAPI service that creates beautiful featured images with Google Fonts support"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "httpx>=0.25.0",
    "Pillow>=10.0.0",
    "aiofiles>=23.2.0",
    "python-dotenv>=1.0.0"
]
readme = "README.md"
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/featured_image_generator"]
